@@ -36,6 +36,8 @@ from plugin dialog for first time.
 +Fix some unicode handling issues in search/replace. (patch from roman.chyla)
 +Fix number of printout rendering issues.
 +Update readonly status when permissions change on disk.
++Fix error in moving a tab from one window to another when the tab was the only
+tab left in the window it was moved from. (filebrowser bug).
 
 #-----------------------------------------------------------------------------#
 
